# interactive-calibration

./: .gitignore  CMakeLists.txt  README.md  defaultConfig.xml
include/: calibCommon.hpp  calibController.hpp  calibPipeline.hpp  cvCalibrationFork.hpp  frameProcessor.hpp  parametersController.hpp
src/: calibController.cpp  calibPipeline.cpp  cvCalibrationFork.cpp  frameProcessor.cpp  linalg.cpp  main.cpp  parametersController.cpp  rotationConverters.cpp
